--- a/src/components/HomePage/HomePage.css
+++ b/src/components/HomePage/HomePage.css
@@ -1,4 +1,117 @@
-.ant-tabs-tab-active{
-  background: red !important;
-  color: white !important;
+.HomePageTabs{
+    background: #a6cec9;
+    padding: 0 15%;
+}
+@media (max-width: 1280px) {
+    .HomePageTabs{
+        background: #a6cec9;
+        padding: 0 8%;
+    }
+}
+.HomePageTabs h3{
+    padding: 24px 0;
+    color: white;
+}
+.HomePageTabsAll{
+    padding-bottom: 40px;
+}
+.HomePageTab{
+    width: 200px;
+    height: 200px;
+    display: inline-block;
+    background: white;
+    border-right: #E4ECE9;
+    border-right-style: double;
+    border-right-color: #e8e8e8;
+    border-width: 1px;
+    padding-left: 10px;
+    font-size: 17px;
+    position: relative;
+}
+@media (max-width: 1280px) {
+    .HomePageTab{
+        width: 179px;
+        height: 214px;
+    }
+}
+.HomePageTab img{
+  width:30px;
+  height: 30px;
+  display: block;
+  margin: 56px 0 30px 0;
+}
+.HomePageTab span{
+    display: block;
+}
+.HomePageTab span:last-child{
+    color:#b5b9b9;
+    font-size: 15px;
+}
+.homeMore{
+    font-size: 15px;
+    position: absolute;
+    right: 5px;
+    top: 8px;
+    color:#b5b9b9;
+}
+.HomePageChracter{
+    padding: 0 15%;
+    background: #d6d6d6;
+    padding-bottom: 60px;
+}
+@media (max-width: 1280px) {
+    .HomePageChracter{
+        padding: 0 8%;
+        background: #d6d6d6;
+        padding-bottom: 40px;
+    }
+}
+.HomePageChracterLeft{
+    width: 50%;
+    display: inline-block;
+    margin-top: 28px;
+    padding-right: 50px;
+    border-right: 1px solid #cecbcb;
+    position: relative;
+}
+.HomePageChracterLeft span{
+    display: block;
+    font-size: 18px;
+    font-weight: 700;
+}
+
+.HomePageChracterLeft span:first-child{
+    color: #ff765d;
+    padding-top: 16px;
+}
+.HomePageChracterLeft span:nth-child(3){
+    font-size: 16px;
+    padding-bottom: 13px;
+}
+.HomePageChracterLeft span:nth-child(4){
+    font-size: 13px;
+    font-weight: normal;
+}
+.HomePageChracterRight{
+    width: 50%;
+    display: inline-block;
+    margin-top: 30px;
+    float: right;
+    padding-left: 50px;
+}
+.HomePageChracterRight span{
+    display: block;
+    font-size: 13px;
+}
+.HomePageChracterRight span:first-child{
+    font-size: 18px;
+    margin-bottom: 20px;
+    font-weight: 700;
+}
+.rightImg {
+    position: absolute;
+    right: 52px;
+    top: 20px;
+    width: 50px;
+    height: 20px;
 }
