--- a/src/components/App/MyFooter/MyFooter.css
+++ b/src/components/App/MyFooter/MyFooter.css
@@ -37,6 +37,7 @@
     background: #ff5200;
     padding: 20px 6%;
     text-align: center;
+    color: white;
 }
 .ant-layout-footer{
     padding: 0 !important;
