--- a/src/components/HomePage/HomePage.css
+++ b/src/components/HomePage/HomePage.css
@@ -24,7 +24,7 @@
     border-right-style: double;
     border-right-color: #e8e8e8;
     border-width: 1px;
-    padding-left: 10px;
+    padding-left: 17px;
     font-size: 17px;
     position: relative;
 }
@@ -46,11 +46,16 @@
 .HomePageTab span:last-child{
     color:#b5b9b9;
     font-size: 15px;
+    line-height: 16px;
+    margin-top: 5px;
+}
+.clickColor{
+    background: #f5f5f5;
 }
 .homeMore{
     font-size: 15px;
     position: absolute;
-    right: 5px;
+    right: 10px;
     top: 8px;
     color:#b5b9b9;
 }
@@ -58,12 +63,14 @@
     padding: 0 15%;
     background: #f7f7f7;
     padding-bottom: 60px;
+    border-bottom: 1px solid #ececec;
 }
 @media (max-width: 1280px) {
     .HomePageChracter{
         padding: 0 8%;
         background: #d6d6d6;
         padding-bottom: 40px;
+        border-bottom: 1px solid #ececec;
     }
 }
 .HomePageChracterLeft{
@@ -71,7 +78,7 @@
     display: inline-block;
     margin-top: 28px;
     padding-right: 50px;
-    border-right: 1px solid #cecbcb;
+    border-right: 1px solid #ececec;
     position: relative;
 }
 .HomePageChracterLeft span{
