--- a/src/components/HomePage/HomePage.css
+++ b/src/components/HomePage/HomePage.css
@@ -34,6 +34,7 @@
         height: 214px;
     }
 }
+
 .HomePageTab img{
   width:30px;
   height: 30px;
@@ -121,4 +122,66 @@
     top: 20px;
     width: 50px;
     height: 20px;
+}
+@media (max-width: 736px) {
+    .HomePageTab{
+        height: 200px;
+        width: 50%;
+        border-bottom: 1px solid #f1f1f1;
+    }
+    .HomePageTab img {
+        width: 30px;
+        height: 30px;
+        display: block;
+        margin: 38px 0 27px 0;
+    }
+    .HomePageChracterLeft{
+        width: 50%;
+        display: inline-block;
+        margin-top: 28px;
+        padding-right: 14px;
+        border-right: 1px solid #ececec;
+        position: relative;
+    }
+    .HomePageChracterLeft span{
+        display: block;
+        font-size: 14px;
+        font-weight: 700;
+    }
+    
+    .HomePageChracterLeft span:first-child{
+        color: #ff765d;
+        padding-top: 0;
+    }
+    .HomePageChracterLeft span:nth-child(3){
+        font-size: 14px;
+        padding-bottom: 12px;
+    }
+    .HomePageChracterLeft span:nth-child(4){
+        font-size: 12px;
+        font-weight: normal;
+    }
+    .HomePageChracterRight{
+        width: 50%;
+        display: inline-block;
+        margin-top: 74px;
+        float: right;
+        padding-left: 15px;
+    }
+    .HomePageChracterRight span{
+        display: block;
+        font-size: 12px;
+    }
+    .HomePageChracterRight span:first-child{
+        font-size: 14px;
+        margin-bottom: 20px;
+        font-weight: 700;
+    }
+    .rightImg {
+        position: absolute;
+        right: 6px;
+        top: 20px;
+        width: 50px;
+        height: 20px;
+    }
 }
