--- a/src/components/News/News.css
+++ b/src/components/News/News.css
@@ -30,7 +30,6 @@
     float: left;
 }
 .NewsTab span{
-  padding: 0 30px;
   overflow: hidden;
   word-break: normal;
   display: block;
@@ -42,7 +41,7 @@
   background-repeat: no-repeat;
   background-position: 4% 47%;
   color: white !important;
-  background-color: #ff5200;
+  background-color: #ff5a00;
   background-size: 12px 12px;
 }
 .ant-tabs-vertical > .ant-tabs-bar .ant-tabs-ink-bar{
@@ -77,4 +76,28 @@
   background:  url('../img/elabrater.png');
   background-repeat: no-repeat;
   background-position-y: 36%;
+}
+@media (max-width: 736px) {
+  .NewsImg{
+      height: 160px;
+  }
+  .NewsTab img{
+      height: 60px;
+      width: 60px;
+  }
+  .rightParttree {
+    background-size: 40px 40px;
+  }
+  .rightParttransform {
+    background-size: 40px 40px;
+  }
+  .rightPartprofix {
+    background-size: 40px 40px;
+  }
+  .rightPartelabrater {
+    background-size: 40px 40px;
+  }
+  .rightPart {
+      padding: 20px 0 30px 42px;
+  } 
 }
