--- a/src/components/HomePage/HomePage.css
+++ b/src/components/HomePage/HomePage.css
@@ -62,14 +62,14 @@
 }
 .HomePageChracter{
     padding: 0 15%;
-    background: #f7f7f7;
+    background: #fdfbfb;
     padding-bottom: 60px;
     border-bottom: 1px solid #ececec;
 }
 @media (max-width: 1280px) {
     .HomePageChracter{
         padding: 0 8%;
-        background: #d6d6d6;
+        background: #fdfbfb;
         padding-bottom: 40px;
         border-bottom: 1px solid #ececec;
     }
@@ -179,9 +179,9 @@
     }
     .rightImg {
         position: absolute;
-        right: 6px;
-        top: 20px;
         width: 50px;
         height: 20px;
+        right: 16px;
+        top: 39px;
     }
 }
