--- a/src/components/IndustryInflu/IndustryInflu.css
+++ b/src/components/IndustryInflu/IndustryInflu.css
@@ -20,7 +20,7 @@
 .IndustryInfluTab h3{
     text-align: center;
     padding: 20px 0;
-    color: black;
+    color: #ff5a00;
 }
 .IndustryInfluTab img{
     height: 100px;
