--- a/src/components/News/News.css
+++ b/src/components/News/News.css
@@ -20,7 +20,7 @@
 .NewsTab h3{
   text-align: center;
   padding: 20px 0;
-  color: #dc6b16;
+  color: #ff5a00;
 }
 .NewsTab img{
     height: 80px;
