--- a/src/components/App/Headers/Headers.css
+++ b/src/components/App/Headers/Headers.css
@@ -60,7 +60,7 @@
 }
 .headerAditional span:first-child{
     position: absolute;
-    left: 8%;
+    left: 15%;
     top: -12px;
 }
 .headerAditional span:last-child{
@@ -78,12 +78,13 @@
         padding-right: 0;
         position: relative;
         display: inline-block;
+        font-size: 10px;
     }
     .headerList > span > img{
         vertical-align: middle;
-        height: 28px;
-        padding-left: 3px;
-        padding-right: 3px;
+        height: 19px;
+        padding-left: 2px;
+        padding-right: 2px;
     }
     .headerList > span > a{
         vertical-align: middle;
@@ -92,13 +93,16 @@
         color: black;
     }
     .headerList > span:nth-child(1){
-        margin-right: 10px;
+        margin-right: 4px;
     }
     .headerList > span:nth-child(2){
         padding-left: 0;
     }
     .headerList > span:last-child{
         display: none
+    }
+    .headerAditional{
+        font-size: 9px;
     }
     .headerAditional span:first-child {
         left: 8%;
