--- a/src/components/HomePage/HomePage.css
+++ b/src/components/HomePage/HomePage.css
@@ -45,10 +45,12 @@
     display: block;
 }
 .HomePageTab span:last-child{
-    color:#b5b9b9;
-    font-size: 15px;
-    line-height: 16px;
+    color: #b5b9b9;
+    font-size: 12px;
     margin-top: 5px;
+    overflow: hidden;
+    display: inline-block;
+    height: 35px;
 }
 .clickColor{
     background: #f5f5f5;
